[project]
name = "aml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.9.0",
    "diffusers>=0.35.2",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.8",
    "kaggle>=1.7.4.5",
    "latentis>=0.0.8",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pycocotools>=2.0.10",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
